--- a/Login/css/app.css
+++ b/Login/css/app.css
@@ -201,8 +201,13 @@ input[type="submit"]:hover {
 }
 @media (max-width:480px){
 	body {
-	  background-position-x: -25em;
-	  min-height: 55em;
+		background:url("../images/bg1.jpg") no-repeat 0px 0px; 
+		font-family: 'Roboto', sans-serif;
+		background-size:cover;
+		-webkit-background-size:cover;
+		-o-background-size:cover;
+		-moz-background-size:cover;
+		min-height: 40em;
 	}
 	h1 {
 	  font-size: 2.4em;
